[package]
name = "snowbridge-erc20-app"
version = "0.1.1"
authors = ["Snowfork <contact@snowfork.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.130", optional = true }
codec = { version = "2.2.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
rlp = { version = "0.5", default-features = false }
hex-literal = { version = "0.3.4", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", default-features = false }

ethabi = { git = "https://github.com/Snowfork/ethabi-decode.git", package = "ethabi-decode", branch = "master", default-features = false }

snowbridge-core = { path = "../../primitives/core", default-features = false }
snowbridge-asset-registry-primitives = { path = "../../primitives/asset-registry", default-features = false }

snowbridge-dispatch = { path = "../dispatch", default-features = false, optional = true }
snowbridge-basic-channel = { path = "../basic-channel", default-features = false, optional = true }
snowbridge-incentivized-channel = { path = "../incentivized-channel", default-features = false, optional = true }
snowbridge-asset-registry = { path = "../asset-registry", default-features = false, optional = true }
pallet-assets = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", default-features = false, optional = true }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", default-features = false, optional = true }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", default-features = false, optional = true }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }

[features]
default = ["std"]
std = [
    "serde",
    "hex/std",
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",

    "snowbridge-core/std",
    "snowbridge-asset-registry-primitives/std",

    "frame-benchmarking/std",
    "snowbridge-dispatch/std",
    "snowbridge-basic-channel/std",
    "snowbridge-incentivized-channel/std",
    "snowbridge-asset-registry/std",
    "pallet-assets/std",
    "pallet-balances/std",
    "pallet-randomness-collective-flip/std",

    "ethabi/std",
    "rlp/std"
]
runtime-benchmarks = [
    "frame-benchmarking",
    "snowbridge-basic-channel",
    "snowbridge-incentivized-channel",
    "snowbridge-asset-registry",
    "pallet-assets",
    "pallet-balances",
    "pallet-randomness-collective-flip",
    "snowbridge-dispatch/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks"
]
