[package]
name = "artemis-eth-app"
version = "0.1.1"
authors = ["Snowfork <contact@snowfork.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
hex-literal = { version = "0.3.1", default-features = false }
rlp = { version = "0.4", default-features = false }

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.4"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"
version = "2.0.0-rc6"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"
version = "2.0.0-rc6"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"
version = "2.0.0-rc6"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"
version = "2.0.0-rc6"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"
version = "2.0.0-rc6"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"
version = "2.0.0-rc6"

[dev-dependencies.sp-keyring]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "v2.0.0-rc6"
version = "2.0.0-rc6"

[dependencies.serde]
package = "serde"
optional = true
version = "1.0.101"
features = ["derive"]

[dependencies.ethabi]
package = "ethabi-decode"
default-features = false
git = "https://github.com/Snowfork/ethabi-decode"

[dependencies.artemis-core]
default-features = false
path = "../../primitives/core"

[dependencies.artemis-ethereum]
default-features = false
path = "../../primitives/ethereum"

[dependencies.artemis-assets]
default-features = false
path = "../../pallets/assets"

[dependencies.artemis-commitments]
default-features = false
path = "../../pallets/commitments"

[features]
default = ["std"]
std = [
    "hex/std",
    "serde/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "artemis-core/std",
    "artemis-ethereum/std",
    "artemis-assets/std",
    "artemis-commitments/std",
    "ethabi/std",
    "rlp/std"
]
